fix: accessibility with contrast and alt text

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,7 +1,7 @@
 :root {
   --md-primary-fg-color: #7b48e2;
   --md-primary-fg-color--light: #bea2f6;
-  --md-primary-fg-color--dark: #6a2ee0;
+  --md-primary-fg-color--dark: #4b1ea5;
   --md-primary-bg-color: #ffffff;
   --md-accent-fg-color: #5e17eb;
   --md-accent-fg-color--light: #ffffff;
@@ -51,7 +51,7 @@
   --md-primary-fg-color--light: #d9c5ff;
   --md-primary-fg-color--dark: #290a67;
   --md-primary-bg-color: #f6f6f6;
-  --md-primary-bg-color--dark: #a376f6;
+  --md-primary-bg-color--dark: #caaffc;
   --md-accent-fg-color: #9564f9;
   --md-accent-bg-color: #f79a36;
 }
